<resources>
    <string name="app_name"></string>
    <string name="facebook_app_id">206777106530321</string>
    <string name="fb_login_protocol_scheme">fb206777106530321</string>
    <string name="navAccount">Tài khoản</string>
    <string name="navMix">Ẩm thực 3 miền</string>
    <string name="navSoup">Canh</string>
    <string name="navGrill">Nướng</string>
    <string name="navFry">Chiên, xào</string>
    <string name="navSteam">Hấp</string>
    <string name="navVegetable">Chay</string>
    <string name="navDessert">Tráng miệng</string>
    <string name="navSetting">Cài đặt</string>
    <string name="navAppSetting">Ứng dụng</string>
    <string name="navAbout">Về chúng tôi</string>
    <string name="navReport">Báo cáo lỗi</string>
    <string name="navShare">Chia sẻ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tabDiscoverFood">Khám phá</string>
    <string name="tabMostViewedFood">Phổ biến nhất</string>
    <string name="tabMostLikedFood">Được yêu thích nhất</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">GONN</string>
    <string name="login_button">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="repeat_password">Nhập lại mật khẩu</string>
    <string name="last_name">Họ</string>
    <string name="first_name">Tên</string>
    <string name="signup">Đăng ký</string>
    <string name="imgFoodDes">Backdrop image</string>
    <string name="imgLikeDes">Like image</string>
    <string name="imgShareDes">Share image</string>
    <string name="txtLogin">Đăng nhập</string>
    <string name="title_activity_food_detail">FoodDetail</string>
    <string name="txtComment">Bình luận của bạn</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_app_settings">Settings</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="account_setting">Cài đặt tài khoản</string>
    <string name="account_setting_change_avatar">Thay đổi ảnh đại diện</string>
    <string name="account_setting_change_password">Đổi mật khẩu</string>
    <string name="account_setting_change_info">Thông tin tài khoản</string>
    <string name="account_setting_logout">Đăng xuất</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="renew_password">Nhập lại mật khẩu mới</string>
    <string name="save">Lưu</string>
    <string name="birthday">Ngày sinh</string>
    <string name="notification">Thông báo</string>
    <string name="policy">Điều khoản sử dụng</string>
    <string name="contact">Liên hệ</string>
    <string name="about">Thông tin ứng dụng</string>
    <string name="app_setting">Cài đặt ứng dụng</string>
    <string name="change_avatar">Đổi ảnh đại diện</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_menu">MenuActivity</string>

</resources>
