<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gonnteam.activities.AccountSettingActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_setting"/>

    <Button
        android:id="@+id/btnChangeAva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_change_avatar"
        android:textAlignment="viewStart" />
    <Button
        android:id="@+id/btnChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_change_password"
        android:textAlignment="viewStart"/>
    <Button
        android:id="@+id/btnChangeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_change_info"
        android:textAlignment="viewStart"/>
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_logout"/>
</LinearLayout>
