<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gonnteam.activities.ChangeAccountInfoActivity">


    <EditText
        android:id="@+id/txtLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        style="@style/editText_style"/>

    <EditText
        android:id="@+id/txtFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name"
        style="@style/editText_style"/>


    <!--<TextView-->
        <!--android:id="@+id/txtBirthday"-->
        <!--android:textSize="18sp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/birthday"-->
        <!---->
        <!--android:clickable="true" />-->
    <Button
        android:id="@+id/btnBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        style="@style/editText_style"/>

    <Button
        android:id="@+id/btnSave"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>
