<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<data>-->
        <!--<variable-->
            <!--name="foodViewHolder"-->
            <!--type="com.gonnteam.adapters.FoodAdapter.FoodViewHolder"/>-->
    <!--</data>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200sp"
            app:srcCompat="@mipmap/backdrop"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imgFoodDes" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tên món ăn"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_like"
                android:contentDescription="@string/imgLikeDes"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000"
                android:layout_gravity="center"
                android:textSize="20sp"/>
            <ImageButton
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_share"
                android:contentDescription="@string/imgShareDes"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000"
                android:layout_gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</layout>